# Operating-Systems

./: README.md
clab1gcc/: ex2  ex2.c  ex2.h  ex3  ex3.c  ex3.h  main.c
clab2/: Makefile  main  main.c
homework2/: Makefile  hello  hellofunc.c  hellofunc.h  hellomain.c
lecture7syncexamples/: dinphil.c  prodconcondition.c  prodconcounter.c  prodconsem.c
project/lab_final/: Makefile  connmgr.c  data.csv  sensor_db.h
project/lab_final/lib/: dplist.c  tcpsock.c
project/startcodeplab1/: Makefile  config.h  datamgr.c  datamgr.h
project/startcodeplab1/lib/: dplist.c  dplist.h
project/startcodeplab2/: CMakeLists.txt
project/startcodeplab2/ex1/: Makefile  ex2_remade.c  sensor_db.c  sensor_db.csv
project/startcodeplab2/milestone2/: Makefile  logger.c  sensor_db.c  sensor_db.csv  sensor_db.h  testing.c
project/startcodeplab3/: Makefile  sensor_node  test_server  test_server.c
project/startcodeplab4/: Makefile  main.c  sbuffer.c  sbuffer.h  sensor_data  sensor_data_out.csv
project/studentsource2025/: CMakeLists.txt  Makefile  build_connmgr  config.h  connmgr.c  connmgr.h  data.csv  datamgr.c  datamgr.h  file_creator.c  main.c  sbuffer.c  sbuffer.h  sensor_db.c  sensor_db.h  sensor_node.c  test3.sh  test5.sh
project/studentsource2025/lib/: dplist.h  tcpsock.h
startcodeclab3/ex1/: Makefile  dplist.c  dplist.h  program.c
startcodeclab3/ex2/: Makefile  dplist.c  program.c
startcodeclab3/milestone1/: Makefile  dplist.c  dplist_test.c
